Fix wrap bbpanel

--- a/src/scss/bbpanel.scss
+++ b/src/scss/bbpanel.scss
@@ -19,6 +19,7 @@
   transform-origin: top center;
   margin: 0;
   gap: 4px;
+  flex-wrap: wrap;
 }
 
 .bbpanel > .bbcode-list.focus {
